--- a/practice/src/main/resources/application.properties
+++ b/practice/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/practice
 spring.datasource.username=postgres
 spring.datasource.password=developer
 spring.jpa.hibernate.ddl-auto=create-drop
