--- a/practice/src/main/resources/application.properties
+++ b/practice/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/practice
+spring.datasource.url=jdbc:postgresql://localhost:5432/
 spring.datasource.username=postgres
 spring.datasource.password=developer
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQL10Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
+
+
+
+spring.jpa.hibernate.ddl-auto = none
